--- a/components/org.wso2.carbon.identity.application.authenticator.passive.sts/pom.xml
+++ b/components/org.wso2.carbon.identity.application.authenticator.passive.sts/pom.xml
@@ -91,8 +91,6 @@
                             org.apache.commons.logging; version="${commons-logging.osgi.version.range}",
                             org.apache.xerces.util; resolution:=optional,
 
-                            org.opensaml.*; version="${opensaml2.wso2.osgi.version.range}",
-
                             org.osgi.framework; version="${osgi.framework.imp.pkg.version.range}",
                             org.osgi.service.component; version="${osgi.service.component.imp.pkg.version.range}",
 
@@ -114,6 +112,7 @@
                             org.wso2.carbon.identity.application.authenticator.passive.sts.*;
                             version="${identity.framework.package.export.version}"
                         </Export-Package>
+                        <Embed-Dependency>opensaml;inline=false</Embed-Dependency>
                         <DynamicImport-Package>*</DynamicImport-Package>
                     </instructions>
                 </configuration>
